# Tanitix

./: .gitignore  Makefile  README  README.md  simpleCode.tx
src/: CMakeLists.txt  main.cpp
src/interpreter/: CMakeLists.txt  ast.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/rules/: CMakeLists.txt
src/space/: CMakeLists.txt  space.cpp  space.h
src/space/drawable_object/: drawableObject.h
src/space/objects/: CMakeLists.txt
src/space/physical_object/: physicalObject.cpp  physicalObject.h
src/space/rules/: CMakeLists.txt  Fields.h  motions2D.cpp  rules.h
src/utils/geometric/: maths.h
src/utils/maths/: maths.h
src/utils/physics/: physics.h
src/visio/: CMakeLists.txt  visio.cpp  visio.h
